# KBoxLabel

./: .gitignore  MANIFEST.in  README.md  README_en.md  publish.sh  pyproject.toml  setup.py
app/: pip_install.sh  requirements_osx_intel.txt
src/: main.py
src/common/conf/: base_config.py  config-debug.yaml
src/common/god/: __init__.py  business_exception.py  common_error.py  korm_base.py  ksnowflake.py  logger.py  session.py  sqlite_db.py
src/common/sql/: annotation_category.py  kolo_item.py
src/core/: ksettings.py  yolo_executor.py
src/core/utils/: string_util.py
src/models/: ref_project_info.py
src/models/data/: annotation_category.db
src/models/dto/: annotation_category.py  ref_project_info.py
src/models/sql/: __init__.py  annotation_category.py  kolo_item.py  kv_config.py
src/ui/: main_window.py  navigation_panel.py  welcome_screen.py
src/ui/dialog/: auto_label_dialog.py  class_manager.py  export_dialog.py  split_dialog.py
src/ui/widget/: image_list.py  main_menu_bar.py
src/ui/widget/image_canvas/: annotation_list.py  annotation_view.py  image_canvas.py
