[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KBoxLabel"
version = "1.0.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A image annotation tool for object detection tasks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "filelock==3.18.0",
    "fonttools==4.59.0",
    "fsspec==2025.7.0",
    "idna==3.10",
    "Jinja2==3.1.6",
    "kiwisolver==1.4.8",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.3",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numpy==1.26.4",
    "opencv-python==4.12.0.88",
    "packaging==25.0",
    "pandas==2.3.1",
    "pillow==11.3.0",
    "psutil==7.0.0",
    "py-cpuinfo==9.0.0",
    "pyparsing==3.2.3",
    "PyQt5==5.15.9",
    "pyqt5-plugins==5.15.9.2.3",
    "PyQt5-Qt5==5.15.2",
    "pyqt5-tools==5.15.9.3.3",
    "PyQt5_sip==12.17.0",
    "pyqtgraph==0.13.7",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "qt5-applications==5.15.2.2.3",
    "qt5-tools==5.15.2.1.3",
    "requests==2.32.4",
    "scipy==1.16.1",
    "six==1.17.0",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "tqdm==4.67.1",
    "typing_extensions==4.14.1",
    "tzdata==2025.2",
    "ultralytics==8.3.170",
    "ultralytics-thop==2.0.14",
    "urllib3==2.5.0",
]

[project.scripts]
KBoxLabel = "main:main"

[project.urls]
Homepage = "https://github.com/your-username/KBoxLabel"
Repository = "https://github.com/your-username/KBoxLabel"